<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.yurii.myapplication.MainActivitytest">
    <item
        android:id="@+id/search_by_rtm"
        android:orderInCategory="100"
        android:title="@string/action_search_by_rtm"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_by_connection"
        android:orderInCategory="100"
        android:title="@string/action_search_by_connection"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_by_name"
        android:orderInCategory="100"
        android:title="@string/action_search_by_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_by_location"
        android:orderInCategory="100"
        android:title="@string/action_search_by_location"
        app:showAsAction="never" />
</menu>
